test_data/Json/Unexpected/Unserializable/InvalidModelType/AssetAdministrationShell/wrong.json.exception
Expected the model type 'AssetAdministrationShell', but got soReallyUtterlyInvalid at: modelType